[#167411611] Fixed some styling, code organization and alignment issues

--- a/components/consumer/mobile/simple-number-stepper/style.scss
+++ b/components/consumer/mobile/simple-number-stepper/style.scss
@@ -1,7 +1,7 @@
-@import '../../shared/scss/styleguide';
-
 .pbg-consumer-mobile {
   &.pbg-simple-number-stepper {
-
+    select {
+      text-indent: 50%;
+    }
   }
 }
